# Fastrack

./: .gitignore  BILLING_IMPLEMENTATION_STATUS.md  IMPORT_OPERATIONS_README.md  MASTER_HOUSE_BILL_README.md  README.md  package.json  pyproject.toml
.github/workflows/: build-and-push.yml  ci.yml
fastrack_erp/: api.py  hooks.py  modules.txt  patches.txt  test.yaml
fastrack_erp/config/: desktop.py  docs.py
fastrack_erp/doc_events/: journal_entry.py  mbl.py  purchase_invoice.py  sales_invoice.py
fastrack_erp/fixtures/: client_script.json  custom_field.json  custom_html_block.json  property_setter.json  workspace.json
fastrack_erp/overide/: payment_entry.py
fastrack_erp/patches/: backfill_container_cost_info_amounts.py  backfill_fastrack_sales_invoice_uom.py
fastrack_erp/public/: node_modules
fastrack_erp/public/css/: theme.css
fastrack_erp/public/js/: payment_entry.js  purchase_invoice.js  (+1 more)
fastrack_erp/report_api/: export_air_invoice_bdt.py  export_air_invoice_usd.py  export_d2d_invoice_bdt.py  export_sea_bill_of_lading.py  export_sea_invoice_bdt.py  export_sea_invoice_usd.py  import_air_invoice_bdt.py  import_air_invoice_usd.py  import_arrival_notice.py  import_d2d_invoice_bdt.py  import_d2d_invoice_usd.py  import_delivery_order.py  import_sea_invoice_bdt.py  import_sea_invoice_from_mbl_usd.py  import_sea_invoice_usd copy.py  import_sea_invoice_usd.py  import_to_concern.py  invoice_list_bridge.py  report_helpers.py
fastrack_erp/www/: portal.html
portal/: index.html  package-lock.json  package.json  vite.config.ts
portal/src/: App.css  App.tsx
(+210 files in other folders)
